# algotrading_v40

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
data/cleaned/indian_market/: inventory.csv
data/raw/indian_market/: inventory.csv
non_prod_tm_code/: COMP_VAR.CPP  LEGENDRE.CPP  STATS.CPP
notebooks/: backtesting.ipynb  data_selectors.ipynb  feature_calculators.ipynb
notebooks/data_cleaners/: indian_market.ipynb
notebooks/date_cleaners/: indian_market.ipynb
notebooks/raw_data_fetchers/: indian_market.ipynb
src/algotrading_v40/: constants.py  performance.py  performance_test.py
src/algotrading_v40/bar_groupers/: int_index_based.py  int_index_based_test.py  time_based.py  time_based_test.py  time_based_uniform.py  time_based_uniform_test.py
src/algotrading_v40/connectors/: zerodha.py
src/algotrading_v40/data_accessors/: synthetic.py  synthetic_data_accessor.py  synthetic_data_accessor_test.py  synthetic_test.py
src/algotrading_v40/data_selectors/: cusum.py  cusum_test.py
src/algotrading_v40/feature_calculators/: adx.py  adx_test.py  close_minus_ma.py  close_minus_ma_test.py  detrended_rsi.py  detrended_rsi_test.py  lin_quad_cubic_trend.py  lin_quad_cubic_trend_test.py  ma_diff.py  ma_diff_test.py  macd.py  macd_test.py  open_gap.py  open_gap_test.py  past_session_return.py  past_session_return_test.py  price_intensity.py  price_intensity_test.py  rsi.py  rsi_test.py  stochastic.py  stochastic_rsi.py  stochastic_rsi_test.py  stochastic_test.py  utils.py  utils_test.py
src/algotrading_v40/labellers/: triple_barrier.py  triple_barrier_test.py
src/algotrading_v40/position_sizers/: probability.py  probability_test.py
src/algotrading_v40/sample_weighers/: concurrency_return_age_adjusted.py  concurrency_return_age_adjusted_test.py
src/algotrading_v40/structures/: data.py  date_range.py  date_range_test.py  instrument_desc.py  instrument_desc_test.py
src/algotrading_v40/trading_time_elapsed_calculators/: with_overnight_gaps_only.py  with_overnight_gaps_only_test.py
src/algotrading_v40/utils/: data_nav.py  data_nav_test.py  df.py  df_test.py  features.py  features_test.py  streaming.py  streaming_test.py  testing.py  testing_test.py  zerodha.py  zerodha_data_cleaning.py  zerodha_data_cleaning_test.py  zerodha_test.py
src/cpp/: bindings.cpp
src/cpp/bar_groupers/: time_based_uniform.cpp
src/cpp/data_selectors/: cusum.cpp
src/cpp/feature_calculators/: adx.cpp  aroon.cpp  close_minus_ma.cpp  detrended_rsi.cpp  lin_quad_cubic_trend.cpp  ma_diff.cpp  macd.cpp  price_intensity.cpp  rsi.cpp  stochastic.cpp  stochastic_rsi.cpp
src/cpp/labellers/: triple_barrier.cpp
src/cpp/position_sizers/: probability.cpp
src/cpp/sample_weighers/: concurrency_return_age_adjusted.cpp
src/cpp/trading_time_elapsed_calculators/: with_overnight_gaps_only.cpp
src/cpp/utils/: features.cpp  features.hpp  io.cpp  stats.cpp  stats.hpp
